zeta-code/tui/src/app/snapshots/app__session_manager_tests__agents_manager_after_preview_closed.snap
---
source: zeta-code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  ≡ .                                           [+]                            [— / —] [Dashboard]

  Idle (1)
> ○ Snapshot session
  Archived (0)






















  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ > Build anything                                                                             │
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯

  Enter to open · Space to preview · Ctrl+X to archive · i to details
