zeta-code/tui/src/app/snapshots/app__session_manager_tests__agents_manager_transient_session_details.snap
---
source: zeta-code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                            [— / —] [Dashboard]

  Idle (1)
> ○ Snapshot┌── Session details ──────────────────────────────────────────────────[✗]─┐
  Archived (│                                                                         │
            │  Session:     Snapshot session                                          │
            │  Session ID:  current                                                   │
            │  Lifecycle:   active                                                    │
            │  Status:      idle                                                      │
            │  Threads:     1                                                         │
            │  Total usage: 0 tokens                                                  │
            │  Model calls: 0                                                         │
            │  Thread:      Root · main · idle                                        │
            │  ID:          current                                                   │
            │  Lifecycle:   active                                                    │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │  ↑/↓ scroll  ·  Esc to close                                            │
  ╭─────────└─────────────────────────────────────────────────────────────────────────┘──────────╮
  │ > Build anything                                                                             │
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
