zeta-code/tui/src/app/snapshots/app__session_manager_tests__agents_session_after_resume_restores_manager_tip.snap
---
source: zeta-code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                            [— / —] [Dashboard]

























  ⏸ ask permissions on                                                                 ← Dashboard
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ >                                                                                            │
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯

  Enter send  ·  shift+tab permissions  ·  /home
