zeta-code/tui/src/app/snapshots/app__session_manager_tests__dashboard_command_opened_manager.snap
---
source: zeta-code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  ≡ .                                                                          [— / —] [Dashboard]

  Idle (1)
  ○ Snapshot session
  Archived (0)






















  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ >                                                                                            │
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯

  Enter to return
