zeta-code/tui/src/app/snapshots/app__session_manager_tests__session_manager_archived_expanded.snap
---
source: zeta-code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  ≡ .                                           [+]                            [— / —] [Dashboard]

  Idle (1)
  ○ Snapshot session
  Archived (1)
> ○ Archived chat





















  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ > Build anything                                                                             │
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯

  Enter to restore · Space to preview · Ctrl+X to delete · i to details
